--- a/index.html
+++ b/index.html
@@ -1,15 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+
     <!-- Footer Section -->
-    
-</body>
+    <footer>
+      <div class="container">
+        <div class="contact">
+          <div>
+            <div class="img-wrap">
+              <img src="./images/main-logo.png" alt="" />
+            </div>
+            <p>
+              Leading digital agency with solid design and development
+              expertise. We build readymade websites, mobile applications, and
+              elaborate online business services.
+            </p>
+            <div class="social">
+              <button class="facebook">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              </button>
+              <button class="twiter">
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </button>
+              <button class="linkdin">
+                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+              </button>
+            </div>
+          </div>
+
+          <div>
+            <ul>
+              <h5>What We Do</h5>
+              <li><a href="">Web Design</a></li>
+              <li><a href="">App Design</a></li>
+              <li><a href="">Social Media Manage</a></li>
+              <li><a href="">Market Analysis Project</a></li>
+            </ul>
+            <ul>
+              <h5>Company</h5>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Career</a></li>
+              <li><a href="">Become Investor</a></li>
+            </ul>
+            <ul>
+              <h5>Support</h5>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Policy</a></li>
+              <li><a href="">Business</a></li>
+            </ul>
+            <ul>
+              <h5>Contact</h5>
+              <li><a href="">WhatsApp</a></li>
+              <li><a href="">Support 24</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <a href="">Copyright © 2022 Avi Yansah</a>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://kit.fontawesome.com/6a0418856e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
