--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
   </head>
   <body>
     <!-- Header -->
+    <header>
+      <div class="navber">
+        <div class="container">
+          <div class="nav-head">
+            <img src="./images/main-logo.png" alt="">
+            <button>
+              <span><i class="fa-solid fa-bars-staggered"></i></span>
+            </button>
+          </div>
+          <div class="link-wrap">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">What We Do</a></li>
+              <li><a href="">Service</a></li>
+              <li><a href="">Project</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <!-- Footer Section -->
     <footer>
