--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="navber">
         <div class="container">
           <div class="nav-head">
-            <img src="./images/main-logo.png" alt="">
+            <img src="./images/main-logo.png" alt="" />
             <button>
               <span><i class="fa-solid fa-bars-staggered"></i></span>
             </button>
@@ -30,6 +30,23 @@
           </div>
         </div>
       </div>
+
+      <main>
+        <div class="container">
+          <div class="content">
+            <h1>A Digital Product Agency</h1>
+            <p class="common-pera">
+              Leading digital agency with solid design and development
+              expertise. We build readymade websites, mobile applications, and
+              elaborate online business services.
+            </p>
+            <button class="btn"><a href="">Contact Now</a></button>
+          </div>
+        </div>
+        <div class="main-img">
+          <img src="./images/main-img.png" alt="">
+        </div>
+      </main>
     </header>
 
     <!-- Footer Section -->
