--- a/index.html
+++ b/index.html
@@ -44,10 +44,36 @@
           </div>
         </div>
         <div class="main-img">
-          <img src="./images/main-img.png" alt="">
+          <img src="./images/main-img.png" alt="" />
         </div>
       </main>
     </header>
+
+    <!-- Our Client -->
+    <section id="our-client">
+      <div class="container">
+        <div class="content">
+          <h1>Our Client</h1>
+          <p class="common-pera">
+            Several selected clients, who already believe in our service.
+          </p>
+        </div>
+        <div class="clients">
+          <div class="img-wrap">
+            <img src="./images/goggle-img.png" alt="" />
+          </div>
+          <div class="img-wrap">
+            <img src="./images/airbnb-img.png" alt="" />
+          </div>
+          <div class="img-wrap">
+            <img src="./images/uber-img.png" alt="" />
+          </div>
+          <div class="img-wrap">
+            <img src="./images/amazon-img.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer Section -->
     <footer>
