complete agency section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@
       </div>
     </section>
 
+    <!-- Agency Since -->
+    <section id="agency-since">
+      <div class="container">
+        <div class="agency-img">
+          <button>
+            <span><i class="fa-solid fa-play"></i></span>
+          </button>
+        </div>
+        <div class="content">
+          <h1>
+            <span>Great Digital Product</span>
+            <span>Agency since 2016</span>
+          </h1>
+          <p class="common-pera">
+            Our Business Plan is a written document describing a company's core
+            business activites, Objectives, and how it plans to achieve its
+            goals. Our goal is to provide our client high quality Product with
+            modern idea accordingly their budgets and according thir
+            reuirements.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer>
       <div class="container">
