complete subscribe section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,27 @@
       </div>
     </section>
 
+    <!-- Subscribe -->
+    <section id="subscribe">
+      <div class="container">
+        <div class="content-wrap">
+          <div class="content">
+            <div>
+              <h1>Subscribe Newsletter</h1>
+              <p class="common-pera">
+                I will update good news and promotion service not spam
+              </p>
+            </div>
+            <div class="input-wrap">
+              <input type="email" placeholder="Enter your email address" />
+              <button class="btn"><a href="">Contact Now</a></button>
+            </div>
+          </div>
+          <div class="right-bg"></div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer>
       <div class="container">
