complete client say sec with bug

--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
       </div>
     </section>
 
+    <!-- Client Say -->
+    <section id="client-say">
+      <div class="container">
+        <div class="heading">
+          <h1>What our happy client say</h1>
+          <p class="common-pera">
+            Several selected clients, who already believe in our service.
+          </p>
+        </div>
+        <div class="slider-wrap">
+          <div class="client-img">
+            <img src="./images/methew-paul-img.png" alt="" />
+          </div>
+          <div class="client-review">
+            <h5>Matthew Paul</h5>
+            <p class="common-pera">
+              Perfect, very good job! Thank you for the amazing design and work.
+              Really impressed with the high quality and quick turnaround time.
+              Highly recommend.
+            </p>
+          </div>
+          <div class="clients">
+            <img src="./images/client-imageset.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Subscribe -->
     <section id="subscribe">
       <div class="container">
