some change in client say sec

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!-- Client Say -->
     <section id="client-say">
-      <div class="container">
+      <div class="wrap">
         <div class="heading">
           <h1>What our happy client say</h1>
           <p class="common-pera">
@@ -110,7 +110,7 @@
         </div>
         <div class="slider-wrap">
           <div class="client-img">
-            <img src="./images/methew-paul-img.png" alt="" />
+            <img src="./images/methoew-paul-img.png" alt="" />
           </div>
           <div class="client-review">
             <h5>Matthew Paul</h5>
