--- a/index.html
+++ b/index.html
@@ -75,6 +75,51 @@
       </div>
     </section>
 
+    <!-- Help Your Buesness -->
+    <div id="help-your-business">
+      <div class="container">
+        <div class="content">
+          <div class="heading">
+            <h1>How can we help your Business ?</h1>
+            <p class="common-pera">
+              We build readymade websites, mobile applications, and elaborate
+              online business services.
+            </p>
+          </div>
+          <div class="cardset">
+            <div class="card">
+              <div class="icon-wrap">
+                <img src="./images/buiness-idea.png" alt="" />
+              </div>
+              <h3>Business Idea Planning</h3>
+              <p>We present you a proposal and discuss niffty-gritty like</p>
+            </div>
+            <div class="card">
+              <div class="icon-wrap">
+                <img src="./images/financial.png" alt="" />
+              </div>
+              <h3>Financial Planning System</h3>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+            <div class="card">
+              <div class="icon-wrap">
+                <img src="./images/development.png" alt="" />
+              </div>
+              <h3>Development Website and App</h3>
+              <p>Communication protocols apart from engagement models</p>
+            </div>
+            <div class="card">
+              <div class="icon-wrap">
+                <img src="./images/market-analysis.png" alt="" />
+              </div>
+              <h3>Market Analysis Project</h3>
+              <p>Protocols apart from aengage models, pricing billing</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Agency Since -->
     <section id="agency-since">
       <div class="container">
@@ -121,7 +166,7 @@
             </p>
           </div>
           <div class="clients">
-            <img src="./images/client-imageset.png" alt="">
+            <img src="./images/client-imageset.png" alt="" />
           </div>
         </div>
       </div>
