--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
                 <img src="./images/buiness-idea.png" alt="" />
               </div>
               <h3>Business Idea Planning</h3>
-              <p>We present you a proposal and discuss niffty-gritty like</p>
+              <p class="common-pera">We present you a proposal and discuss niffty-gritty like</p>
             </div>
             <div class="card">
               <div class="icon-wrap">
                 <img src="./images/financial.png" alt="" />
               </div>
               <h3>Financial Planning System</h3>
-              <p>Protocols apart from aengage models, pricing billing</p>
+              <p class="common-pera">Protocols apart from aengage models, pricing billing</p>
             </div>
             <div class="card">
               <div class="icon-wrap">
                 <img src="./images/development.png" alt="" />
               </div>
               <h3>Development Website and App</h3>
-              <p>Communication protocols apart from engagement models</p>
+              <p class="common-pera">Communication protocols apart from engagement models</p>
             </div>
             <div class="card">
               <div class="icon-wrap">
                 <img src="./images/market-analysis.png" alt="" />
               </div>
               <h3>Market Analysis Project</h3>
-              <p>Protocols apart from aengage models, pricing billing</p>
+              <p class="common-pera">Protocols apart from aengage models, pricing billing</p>
             </div>
           </div>
         </div>
